--- a/Front/front/src/styles/Header.css
+++ b/Front/front/src/styles/Header.css
@@ -8,7 +8,7 @@
 }
 
 .nav-container {
-  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -29,7 +29,18 @@
   height: auto;
 }
 
-.nav-item {
+.nav-sign-in {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.nav-user-icon {
+  width: 35px;
+  height: 35px;
+}
+
+.nav-link {
   display: inline-flex;
   align-items: center;
   gap: 0.5rem;
@@ -39,7 +50,7 @@
   color: #2c3e50;
 }
 
-.nav-item:hover {
+.nav-link:hover {
   text-decoration: underline;
   color: #2c3e50;
 }
