--- a/Front/front/src/App.css
+++ b/Front/front/src/App.css
@@ -1,9 +1,7 @@
 #root {
   max-width: 1440px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .logo:hover {
