--- a/Front/front/src/styles/Sign-in.css
+++ b/Front/front/src/styles/Sign-in.css
@@ -2,13 +2,16 @@
   background-color: #12002b;
   width: 100%;
   height: 75vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .sign-in-box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  padding-bottom: 2rem;
   height: 100%;
 }
 .sign-in-button {
