--- a/Front/front/src/styles/User.css
+++ b/Front/front/src/styles/User.css
@@ -56,9 +56,13 @@ h3 {
 .edit-button {
   border-color: #00bc77;
   background-color: #00bc77;
+  border-radius: 0px;
   color: #fff;
   font-weight: bold;
-  padding: 10px;
+  font-size: 1.5rem;
+  padding: 15px;
+  width: 150px;
+  height: auto;
 }
 
 .account-content-wrapper-cta {
