--- a/Front/front/src/styles/Sign-in.css
+++ b/Front/front/src/styles/Sign-in.css
@@ -14,6 +14,14 @@
   padding-bottom: 2rem;
   height: 100%;
 }
+
+.sign-in-box h1 {
+  font-size: 3rem;
+  color: #000000;
+  margin: 0;
+  padding: 1rem 0 2rem 0;
+}
+
 .sign-in-button {
   display: block;
   width: 100%;
